# EurekaLabs

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  sqlite3.db
adapters/: AlphaAdapter.py
configs/: Auth.py  Database.py  Environment.py
models/: UserModel.py
repositories/: UserRepository.py
routers/v1/: AlphaRouter.py  AuthRouter.py  UserRouter.py
schemas/: AlphaSchema.py  AuthSchema.py  UserSchema.py
services/: UserService.py
